--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" :"npm run bulid",
+    "deploy" : "gh-pages -d bulid",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy" :"npm run bulid",
-    "deploy" : "gh-pages -d bulid"
+    "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
